打ち込んだテキストを連続して表示

--- a/templates/main.pug
+++ b/templates/main.pug
@@ -10,4 +10,4 @@ html(lang="ja")
       div#app
         input#text_box(type="text")
         button#btn(onclick="send_mes();") PUSH
-        p#result
+        ul#result(style="list-style:none;")
