フォントを一部変更

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+body {
+
+}
+
 input{
     height: 20px;
     width: 500px;
@@ -23,4 +27,17 @@ input:active, input:focus{
 .resultapp {
     width: 500px;
     background-color: #eee;
+    font-size: 16px;
+    font-smooth: never;
+    -webkit-font-smoothing: none;
+    font-family: 'pokemon-font', monospace;
+}
+
+@font-face {
+    font-family: 'pokemon-font';
+    src: url('../fonts/pokemon-font.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/pokemon-font.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/pokemon-font.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/pokemon-font.woff') format('woff'), /* Pretty Modern Browsers */
+    url('../fonts/pokemon-font.ttf')  format('truetype') /* Safari, Android, iOS */
 }
