--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,3 +41,29 @@ input:active, input:focus{
     url('../fonts/pokemon-font.woff') format('woff'), /* Pretty Modern Browsers */
     url('../fonts/pokemon-font.ttf')  format('truetype') /* Safari, Android, iOS */
 }
+
+.resultappul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.resultappli {
+    float: left;
+}
+
+.resultappa {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+
+}
+
+.resultappa:hover {
+    background-color: #111;
+
+}
