--- a/templates/main.pug
+++ b/templates/main.pug
@@ -8,8 +8,9 @@ html(lang="ja")
   body
     h1.sitettl wstest
     ul.resultappul
-      li.resultappli: a.resultappa(href="#") Home
-      li.resultappli: a.resultappa(href="#") Test
+      li.resultappli: a.resultappa(href="/") Home
+      li.resultappli: a.resultappa(href="auth/login") Login
+      li.resultappli: a.resultappa(href="auth/logout") Logout
     main.main
     div#app(Align="center")
       input#text_box(type="text")
