ユーザ登録機能追加. UIとadmin周り, ユーザを紐付けた機能について今後実装

--- a/templates/main.pug
+++ b/templates/main.pug
@@ -9,6 +9,7 @@ html(lang="ja")
     h1.sitettl wstest
     ul.resultappul
       li.resultappli: a.resultappa(href="/") Home
+      li.resultappli: a.resultappa(href="/signup") Signup
       li.resultappli: a.resultappa(href="auth/login") Login
       li.resultappli: a.resultappa(href="auth/logout") Logout
     main.main
