--- a/templates/main.pug
+++ b/templates/main.pug
@@ -1,20 +1,11 @@
-doctype html
-html(lang="ja")
-  head
-    meta(charset="utf-8")
-    link(href="{{ static_url('css/style.css') }}", rel="stylesheet")
-    script(src="{{ static_url('js/ws_response.js') }}")
-    title wstest
-  body
-    h1.sitettl wstest
-    ul.resultappul
-      li.resultappli: a.resultappa(href="/") Home
-      li.resultappli: a.resultappa(href="/signup") Signup
-      li.resultappli: a.resultappa(href="auth/login") Login
-      li.resultappli: a.resultappa(href="auth/logout") Logout
-    main.main
-    div#app(Align="center")
-      input#text_box(type="text")
-      button.chatbutton#btn(onclick="send_mes();"): span.chatbuttonspan PUSH
-      div.resultapp
-        ul#result(style="list-style:none;")
+{% extends "base.pug" %}
+
+{% block pagename %}wstest{% end %}
+
+{% block content %}
+div#app(Align="center")
+  input#text_box(type="text")
+  button.chatbutton#btn(onclick="send_mes();"): span.chatbuttonspan PUSH
+  div.resultapp
+    ul#result(style="list-style:none;")
+{% end %}
