--- a/templates/signup.pug
+++ b/templates/signup.pug
@@ -4,8 +4,14 @@
 
 {% block content %}
 form(action="/signup" method="post")
-  p: username: input(type="text" name="username")
-  p: password: input(type="password" name="password")
-  p(innerHTML="confirmpassword"): input(type="password" name="confirm")
+  div.form-group
+    label username
+    input#username(type="text" name="username")
+  div.form-group
+    label password
+    input#password(type="password" name="password")
+  div.form-group
+    label confirm password
+    input#confirm(type="password" name="confirm")
   input(type="submit" value="Sign Up")
 {% end %}
