--- a/templates/base.pug
+++ b/templates/base.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang="ja")
   head
     meta(charset="utf-8")
+    link(href="{{ static_url('css/col.css') }}", rel="stylesheet")
     link(href="{{ static_url('css/style.css') }}", rel="stylesheet")
     script(src="{{ static_url('js/ws_response.js') }}")
     title wstest
