--- a/templates/main.pug
+++ b/templates/main.pug
@@ -4,6 +4,8 @@
 
 {% block content %}
 div#app(Align="center")
+  div.botapp
+    p#botmes(style="list-style:none;") ごはんどうしますか?
   input#text_box(type="text")
   button.chatbutton#btn(onclick="send_mes();"): span.chatbuttonspan PUSH
   div.resultapp
