--- a/templates/main.pug
+++ b/templates/main.pug
@@ -3,11 +3,12 @@
 {% block pagename %}wstest{% end %}
 
 {% block content %}
-div#app(Align="center")
+div.mainform#app(align="center")
   div.botapp
-    p#botmes(style="list-style:none;") ごはんどうしますか{{current_user}}?
-  input#text_box(type="text")
-  button.chatbutton#btn(onclick="send_mes();"): span.chatbuttonspan PUSH
+    p#botmes(style="list-style:none;") {{current_user}}さん、きょうのごはんはなんでした?
   div.resultapp
-    ul#result(style="list-style:none;")
+    p#result(style="list-style:none;")
+  div.sendform
+    input#text_box(type="text")
+    button.chatbutton#btn(onclick="send_mes();"): span.chatbuttonspan PUSH
 {% end %}
